--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,10 @@ TODO 2c
 Customize the .jumbotron class to have centered text instead of left-aligned
 Also change its bottom margin to 1%
 */
-
+.jumbotron {
+	text-align: center;
+	margin-bottom: 1%;
+}
 
 /*
 TODO 2h
@@ -14,14 +17,20 @@ Give the Watchlist items some styles:
 - a little bit of margin on the bottom and right edges
 - no padding
 */
-
+#panel-watchitem li {
+	width: 160px;
+	margin: 0px 10px 10px 0px;
+	padding: 0px;
+}
 
 /*
 TODO 2j
 The "I watched it" button should fill the entire width of its container, 
 and should be 10px below the neighbor element above it
 */
-
+.watched-it {
+	margin-top: 10px;
+}
 
 /*
 TODO 3c
@@ -54,29 +63,3 @@ section {
 	padding: 2%;
 }
 
-
-/*
-TODO 5
-Delete everything else below! 
-The Bootstrap classes have made this stuff no longer relevant
-*/
-
-ul {
-	padding-left: 0px;
-}
-
-button:disabled {
-	opacity: 0.5;
-}
-
-button, input[type="submit"] {
-	padding: 10px;
-	background: orange;
-	border-width: 0px;
-	color: white;
-}
-
-#section-browse li {
-	margin-bottom: 40px;
-	list-style: none;
-}
