--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,20 @@
 	margin-bottom: 1%;
 }
 
+.well {
+	background: red;
+	color: white;
+	border-width: 0;
+}
+
+.carousel-inner {
+	padding-left: 0px;
+}
+
+#add-to-watchlist {
+	width: 100%;
+}
+
 
 #section-watchlist li {
 	padding: 0px;
@@ -44,4 +58,9 @@ section header {
 
 section {
 	padding: 2%;
+}
+
+#browse-carousel {
+    max-width: 300px;
+    margin: auto;
 }
